# genai-engineer-365

./: .gitignore  LICENSE  README.md
Learning_notes/: day-001  day-001.md  day-002  day-002.md  day-003.md  day-004.md  day-005.md  day-006  day-007  day-008.md  day-009.md  day-10.md  day-11.md  day-13.md  day-14.md  day-15.py  day-16.md  day-17.md  day-18.md  day-19.md  day-20.md  day-21.md  day-22.md  day-23.md  day-24.md  day-25.md  day-26.md  day-27.md  day-28.md  day-29.md  day-30.md  day-31.md  day12.md
Projects/llm-powered-cli-assistent/src/: app.py  helper.py  logger_config.py  main.py  memory.py  metrics.py  models.py  storage.py  summary_memory.py  system_prompts.py  test_helpers.py
projects/llm-powered-cli-assistent/: README.md
projects/llm-powered-cli-assistent/src/: .env  commands.py  main.py  requirements.txt  test_helpers.py
src/: day-002.py  day-003.py  day-005.py
src/day-004/: .env  main.py
src/day-006/: main.py
src/day-008/src/: llm.py  main.py
src/day-009/src/: .env
src/day-10/src/: .env  llm.py  logger_config.py  main.py
src/day-11/src/: .env  llm.py  main.py
src/day-12/src/: .env  llm.py  main.py
src/day-13/src/: .env  main.py  requirements.txt
src/day-14/src/: .env  main.py
src/day-15/src/: llm.py  main.py  memory.py  requirements.txt
src/day-16/src/: .env  llm.py  main.py  models.py  requirements.txt
src/day-17/src/: main.py
src/day-18/src/: llm.py  main.py  memory.py  (+1 more)
src/day-24/: .env  llm.py
src/day-29/: README.md  pyproject.toml
src/day-29/src/: config.py  main.py
src/day-29/tests/: test.py
(+14 files in other folders)
